Fixed size price change bug; fixed background images on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1085,12 +1085,14 @@ a {
 #customBox {
   background: url("/assets/toppings/mushrooms/mushrooms-full.png"), url("/assets/cheese/cheese-mozzarella.png"), url("/assets/sauce/sauce-marinara.png"), url("/assets/crust/crust-thick.png");
   background-repeat: no-repeat;
-  background-size: "contain"; }
+  background-size: contain;
+  background-position: center; }
 
 #preBuiltBox {
   background: url("/assets/toppings/onions/onions-full.png"), url("/assets/toppings/bellpeppers/bellpeppers-full.png"), url("/assets/toppings/mushrooms/mushrooms-full.png"), url("/assets/toppings/pepperoni/pepperoni-full.png"), url("/assets/toppings/sausage/sausage-full.png"), url("/assets/toppings/beef/beef-full.png"), url("/assets/cheese/cheese-mozzarella.png"), url("/assets/sauce/sauce-marinara.png"), url("/assets/crust/crust-thick.png");
   background-repeat: no-repeat;
-  background-size: "contain"; }
+  background-size: contain;
+  background-position: center; }
 
 @media screen and (max-width: 970px) {
   .pizza-box {
@@ -1223,3 +1225,5 @@ a {
 
   .pb-row {
     flex-direction: row; } }
+
+/*# sourceMappingURL=style.css.map */
